loading modal and type changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="schedTable-container">
       <table id="schedTable">
         <thead>
-          <tr><th>#</th><th>Start (UTC)</th><th>Track</th><th>Air Date</th><th>Duration (s)</th><th>Status</th></tr>
+          <tr><th>#</th><th>Start (UTC)</th><th>Track</th><th>Original Air Date</th><th>Duration (s)</th><th>Status</th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -28,6 +28,14 @@
   </div>
 
   <div id="mediaContainer"></div>
+
+  <div id="loadingModal">
+    <div class="modal-content">
+      <h2 class="modal-heading">Loading</h2>
+      <div class="loader"></div>
+      <p class="modal-text">Please wait while your content loads...</p>
+    </div>
+  </div>
 
   <div id="autoplayModal">
     <div class="modal-content">
