--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="schedTable-container">
       <table id="schedTable">
         <thead>
-          <tr><th>#</th><th>Start (UTC)</th><th>Track</th><th>Original Air Date</th><th>Duration (s)</th><th>Status</th></tr>
+          <tr><th>#</th><th>Start (UTC)</th><th>Track</th><th>Original Air Date</th><th>Status</th></tr>
         </thead>
         <tbody></tbody>
       </table>
