more player updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   
   <div class="controls">
     <div id="status">Not loaded</div>
+    <button id="muteButton" class="mute-button">
+      <i class="fas fa-volume-up"></i>
+      <span>Mute</span>
+    </button>
   </div>
 
   <div class="content-container">
