updates to desktop view

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <tbody></tbody>
       </table>
     </div>
+    <div class="desktop-progress">
+      <div class="progress-container">
+        <div id="desktopProgressBar" class="progress-bar"></div>
+      </div>
+      <div id="desktopTime" class="desktop-time">00:00:00</div>
+    </div>
   </div>
 
   <div id="mediaContainer"></div>
