--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
   </div>
   
   <div class="controls desktop-controls">
-    <div class="desktop-now-playing">
-      <div id="status">Not loaded</div>
-      <div class="progress-container">
-        <div id="desktopProgressBar" class="progress-bar"></div>
-      </div>
-      <div id="desktopTime" class="time">00:00:00</div>
-    </div>
+    <div id="status">Not loaded</div>
     <button id="muteButton" class="mute-button">
       <i class="fas fa-volume-up"></i>
       <span>Mute</span>
@@ -63,6 +57,12 @@
         <tbody></tbody>
       </table>
     </div>
+    <div class="desktop-progress">
+      <div class="progress-container">
+        <div id="desktopProgressBar" class="progress-bar"></div>
+      </div>
+      <div id="desktopTime" class="desktop-time">00:00:00</div>
+    </div>
   </div>
 
   <div id="mediaContainer"></div>
@@ -83,6 +83,6 @@
     </div>
   </div>
 
-  <script src="script.js" type="module"></script>
+  <script src="script.js"></script>
 </body>
 </html>
