update mobile layout to show cover art

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <h1>RFR Classic</h1>
   </div>
 
+  <div class="mobile-cover-art">
+    <img id="mobileCoverArt" src="" alt="Episode Cover Art">
+  </div>
+
   <div class="mobile-info">
     <div class="mobile-now-playing">
       <h3>Now Playing</h3>
