--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="header-container">
-    <h1>Podcast Classics</h1>
+    <h1>RFR Classic</h1>
   </div>
 
   <div class="mobile-cover-art">
